--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,13 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_salir">Salir</string>
+    <string name="action_reload">Recargar</string>
 
     <string name="menu_servicio">Servicio</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="location_change_receiver">android.location.PROVIDERS_CHANGED</string>
     <string name="menu_info">Info</string>
+    <string name="menu_logout">Cerrar sesión</string>
+    <string name="action_refresh">Refrescar</string>
 </resources>
